<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MicPhone</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_micphone">Welcome to MicPhone!</string>
    <string name="get_started">To get started, select a server.</string>
    <string name="select_server">Select Server&#8230;</string>
    <string name="wifi_disconnected">WiFi Disconnected</string>
    <string name="must_connect_wifi">You must connect to a WiFi network to use this application.</string>
    <string name="connect">WiFi Settings&#8230;</string>
    <string name="discovering">Discovering&#8230;</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="micphone_version">MicPhone v0.1</string>
    <string name="micphone_description">Transforms your device into a microphone</string>
    <string name="by_teamburden">by Team Burden</string>
    <string name="built_during_hnr14">built during HacknRoll 2014</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="start_server">Start Server</string>
    <string name="stop_server">Stop Server</string>
    <string name="hello_world">Hello World</string>
    <string name="title_activity_settings">Activity Setting</string>

</resources>
