<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_vertical|top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutFragment" >

    <ImageView
        android:id="@+id/micphone_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        android:maxHeight="150dp"
        android:maxWidth="200dp"
        android:src="@drawable/main" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/micphone_version"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22sp"
        android:textStyle="bold" />
    
        
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/by_teamburden"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="15sp"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/built_during_hnr14"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="15sp"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/micphone_description"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"/>

</LinearLayout>