<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/micphone_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/main" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/welcome_to_micphone"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/get_started"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic" />

    <Button
        android:id="@+id/select_server_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/select_server" />

</LinearLayout>